--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
   "bugs": {
     "url": "https://github.com/RizaldoAR/webautomatedtesting/issues"
   },
-  "homepage": "https://github.com/RizaldoAR/webautomatedtesting#readme"
+  "homepage": "."
 }
